--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -2,7 +2,6 @@
 
 
 .contact{
-    word-spacing: 5px;
     font-size: 1.1em;
     min-height: 100vh;
     background-color: transparentize($color: #000000, $amount: 0.985);
